[package]
name = "revi"
version = "0.0.0-beta-3"
authors = ["cowboy8625 <cowboy8625@protonmail.com>"]
edition = "2021"
description = "A Vim/NeoVim Inspired Text Editor"
readme = "README.md"
repository = "https://github.com/revi-editor/revi"
license-file = "LICENSE"
keywords = ["text-editor", "command-line", "termainl", "vim", "configuration"]
categories = ["text-editors", "text-processing", "command-line-utilities", "command-line-interface"]

[dependencies]
revi-ui = { path = "./crates/revi-ui", version="0.0.0-beta-3" }
#revi-core = { path = "./crates/revi-core", version="0.0.0-beta-3" }
ropey = "1.6.0"
clap = "2.33.3"
rhai = { version = "1.13.0", features = ["metadata"] }

# tree-sitter = "0.20.10"
# tree-sitter-javascript = "0.20.1"
# tree-sitter-rust = "0.20.4"
# tree-sitter-md = "0.1.7"

syntastica = "0.4.1"
syntastica-parsers = { version = "0.4.1", features = ["all"] }
syntastica-themes = "0.4.1"


[workspace]

members = ["./crates/*"]

