[package]
name = "revi"
version = "0.0.0-beta-3"
authors = ["cowboy8625 <cowboy8625@protonmail.com>"]
edition = "2021"
description = "A Vim/NeoVim Inspired Text Editor"
readme = "README.md"
repository = "https://github.com/revi-editor/revi"
license-file = "LICENSE"
keywords = ["text-editor", "command-line", "termainl", "vim", "configuration"]
categories = ["text-editors", "text-processing", "command-line-utilities", "command-line-interface"]

[dependencies]
ropey = "1.6.1"
clap_derive = "4.5.4"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
anyhow = "1.0.81"

