[package]
name = "revi-core"
version = "0.0.0-beta-0.7"
authors = ["cowboy8625 <cowboy8625@protonmail.com>"]
edition = "2018"
description = "Provides core functionality for revi test editor."
repository = "https://github.com/revi-editor/revi"
license = "MIT"
keywords = ["revi"]

[dependencies]
clap = "2.33.3"
mlua = { version = "0.6.1", features = ["lua53", "vendored"] }
unicode-width = "0.1.8"
unicode-segmentation = "1.7.1"
revi-ui = { path = "../revi-ui", version="0.0.0-beta-0.6" }
ropey = "1.3.1"

[features]
debug_bar = []
debug_line = []
debug_line_words = []
debug_input_number = []
debug_offset = []
