[package]
name = "revi-core"
version = "0.0.0-beta-2"
authors = ["cowboy8625 <cowboy8625@protonmail.com>"]
edition = "2018"
description = "Provides core functionality for revi test editor."
repository = "https://github.com/revi-editor/revi"
license = "MIT"
keywords = ["revi"]

[dependencies]
clap = "2.33.3"
unicode-width = "0.1.8"
unicode-segmentation = "1.7.1"
revi-ui = { path = "../revi-ui", version="0.0.0-beta-2" }
ropey = "1.3.1"
mlua = { version = "0.8", features = ["macros", "lua54", "vendored"] }

[features]
debug_bar = []
debug_line = []
debug_line_words = []
debug_input_number = []
debug_offset = []
