[package]
name = "revi-core"
version = "0.0.0-beta-2"
authors = ["cowboy8625 <cowboy8625@protonmail.com>"]
edition = "2018"
description = "Provides core functionality for revi text editor."
repository = "https://github.com/revi-editor/revi"
license = "MIT"
keywords = ["revi"]

[dependencies]
clap = "2.33.3"
unicode-width = "0.1.8"
unicode-segmentation = "1.7.1"
revi-ui = { path = "../revi-ui", version="0.0.0-beta-2" }
ropey = "1.6.0"
rhai = { version = "1.13.0", features = ["metadata"] }
