[package]
name = "revi-ui"
version = "0.0.0-beta-3"
authors = ["cowboy8625 <cowboy8625@protonmail.com>"]
edition = "2021"
description = "Provides ui functionality for revi test editor."
repository = "https://github.com/revi-editor/revi"
license = "MIT"
keywords = ["revi"]

[dependencies]
crossterm = "0.26.1"
itertools = "0.10.0"
dyn-clone = "1.0.12"
